2008-05-15  Reini Urban  <rurban@x-ray.at>

	* modules/clx/new-clx/clx.f [__CYGWIN__]: include <X11/Xwindows.h>
	first thing to avoid conflicts with INT32,BOOL defined in
	<windows.h> included from clisp.h

2008-05-15  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (doc-distrib): exclude *~ and .#*

2008-05-15  Sam Steingold  <sds@gnu.org>

	* 2.45 tagged and released

2008-05-14  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (GETPPID): implement
	* modules/syscalls/posix.lisp (getppid): export
	* modules/syscalls/configure.in (getppid): test

2008-05-13  Bruno Haible  <bruno@clisp.org>

	* src/m4/pkg.m4: New file, from pkg-config-0.23.

2008-05-13  Bruno Haible  <bruno@clisp.org>

	* src/m4/bold.m4 (BOLD_MSG): Fix underquoting.

2008-05-13  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (SETREUID, SETREGID, TGAMMA): implement
	* modules/syscalls/configure.in (setreuid, setregid, tgamma): check
	(signgam): fix test
	* modules/syscalls/posix.lisp (setreuid, setregid, tgamma): export

2008-05-13  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (USER-INFO): use I_to_uid instead of
	I_to_uint32; when getlogin() fails, signal an error instead of
	defaulting to getuid()

2008-05-12  Bruno Haible  <bruno@clisp.org>

	Clear spurious error messages on MacOS X 10.5.
	* m4/address.m4 (CL_ADDRESS_RANGE): Remove conftest.dSYM directory
	before conftest* files.
	* m4/eloop.m4 (CL_ELOOP): Likewise.
	* m4/filecharset.m4 (CL_FILECHARSET): Likewise.
	* m4/param.m4 (CL_MACHINE): Likewise.

2008-05-12  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (tp-mail): put clisp version into the subject line

2008-05-12  Sam Steingold  <sds@gnu.org>

	* foreign.d (convert_to_foreign): accept Fpointer as a C-POINTER
	so that POSIX:FOPEN value can actually be used by FFI

2008-05-11  Sam Steingold  <sds@gnu.org>

	* comptran.d (N_log_abs_R): fix a GC-safety bug (R_R_comp -
	comparison! - turned out to maygc)

2008-05-10  Sam Steingold  <sds@gnu.org>
